--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">RosetoPersolino</string>
+    <string name="text_message">Roseto del Persolino</string>
+    <string name="welcome_message">Benvenuti</string>
+    <string name="button_start">Inizia la tua Visita</string>
+
 </resources>
