--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -4,4 +4,8 @@
     <string name="text_message">Roseto del Persolino</string>
     <string name="welcome_message">Bienvenida</string>
     <string name="button_start">Comience su visita</string>
+    <string name="button_visitor">Visitante</string>
+    <string name="button_technical">Técnico</string>
+    <string name="map">Mapa del jardìn de rosas</string>
+    <string name="button_exit">Si has terminado tu visita haz clic aquì</string>
 </resources>
