--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -4,4 +4,8 @@
     <string name="text_message">Roseto del Persolino</string>
     <string name="welcome_message">Bienvenu</string>
     <string name="button_start">Commencez votre visite</string>
+    <string name="button_visitor">Visiteur</string>
+    <string name="button_technical">Technique</string>
+    <string name="map">Carte de la roseraie</string>
+    <string name="button_exit">Si vous avez terminé votre visite cliquez ici</string>
 </resources>
